@@ -5,7 +5,7 @@ import static org.junit.Assert.assertTrue;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
@@ -32,7 +32,7 @@ public class WebDriverBackedEmbeddedBrowserTest {
 
 		Document doc;
 		try {
-			driver.goToUrl(new URL("file://" + index.getAbsolutePath()));
+			driver.goToUrl(URI.create("file://" + index.getAbsolutePath()));
 
 			doc = DomUtils.asDocument(driver.getStrippedDom());
 			NodeList frameNodes = doc.getElementsByTagName("IFRAME");
@@ -56,7 +56,7 @@ public class WebDriverBackedEmbeddedBrowserTest {
 
 		File f = File.createTempFile("webdriverfirefox-test-screenshot", ".png");
 		if (!f.exists()) {
-			browser.goToUrl(new URL("file://" + index.getAbsolutePath()));
+			browser.goToUrl(URI.create("file://" + index.getAbsolutePath()));
 			browser.saveScreenShot(f);
 			assertTrue(f.exists());
 			assertTrue(f.delete());
